Revert "Fixed sidebar z-index and navbar position."
This reverts commit 1f4cef2cdd916da7be481fbe52792c2d5e3a2df5.

--- a/css/sass/main.scss
+++ b/css/sass/main.scss
@@ -39,7 +39,6 @@ body {
   padding-right: 0;
   padding-bottom: 0;
   padding-left: 230px;
-  padding-top: 50px;
   min-height: 400px;
   transition: padding-left 250ms ease-in;
 
